--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 	<link rel="apple-touch-icon" sizes="{{ size }}x{{ size }}" href="/{{ ICONS_PATH }}/apple-touch-icon-{{ size }}x{{ size }}.png">
 	{% endfor %}
 
-	{% for size in (16, 32, 96, 160, 196) %}
+	{% for size in (16, 32) %}
 	<link rel="icon" type="image/png" href="/{{ ICONS_PATH }}/favicon-{{ size }}x{{ size }}.png" sizes="{{ size }}x{{ size }}">
 	{% endfor %}
 
