--- a/templates/404.html
+++ b/templates/404.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Page Not Found | {{ SITENAME }}{% endblock %}
+{% block title %}Página no encontrada| {{ SITENAME }}{% endblock %}
 {% block meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {% block content %}
-	<h1 class="title">Page Not Found</h1>
+	<h1 class="title">Página no encontrada</h1>
 	<div class="content">
-		<p>The requested page could not be found. Perhaps try looking through the <a href="/archive/">post archive</a>?</p>
+        <p>Puede intentar encontrarla en el <a href="/archive/">Archivo</a> del sitio</p>
 	</div>
-	<div id="back-to-home"><a href="/">&laquo; Back to Home</a></div>
+	<div id="back-to-home"><a href="/">&laquo; Volver a inicio to</a></div>
 {% endblock %}
