--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 
-{% block title %}Archive | {{ SITENAME }}{% endblock %}
+{% block title %}Archivo | {{ SITENAME }}{% endblock %}
 
 {% block content %}
-	<h1 class="title"><a href="/archive/">Archive</a></h1>
+	<h1 class="title"><a href="/archive/">Archivo</a></h1>
 	<div class="content">
 		{% for year, articles in dates | groupby('date.year') | sort(reverse=True) %}
 		<h2><a href="/{{ year }}/">{{ year }}</a></h2>
 		<ul>
 			{% for article in articles | sort(attribute='date', reverse=True) %}
-			<li><a href="/{{ article.url }}">{{ article.title }}</a> &raquo; {{ article.locale_date }}</li>
+            <li><a href="/{{ article.url }}">{{ article.title }}</a> &raquo; {{ article.date.strftime('%-d de %B') }}</li>
 			{% endfor %}
 		</ul>
-		{% endfor %}
+        {% endfor %}
 	</div>
-	<div id="back-to-home"><a href="/">&laquo; Back to Home</a></div>
+	<div id="back-to-home"><a href="/">&laquo Volver a inicio</a></div>
 {% endblock %}
