--- a/templates/page.html
+++ b/templates/page.html
@@ -21,5 +21,5 @@
 	<div class="content">
 		{{ page.content }}
 	</div>
-	<div id="back-to-home"><a href="/">&laquo; Back to Home</a></div>
+	<div id="back-to-home"><a href="/">&laquo; Volver a inicio</a></div>
 {% endblock %}
