--- a/templates/period_archives.html
+++ b/templates/period_archives.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Archive for {{ period | reverse | join(' ') }} | {{ SITENAME }}{% endblock %}
+{% block title %}Archivo en {{ period | reverse | join(' ') }} | {{ SITENAME }}{% endblock %}
 {% block meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {% block content %}
-	<h1>Archive for {{ period | reverse | join(' ') }}</h1>
+	<h1>Archive en {{ period | reverse | join(' ') }}</h1>
 	<div class="content">
 	{% for year, _ in dates | groupby('date.year') %}
 		{% for month, articles in dates | groupby('date.month') %}
@@ -19,5 +19,5 @@
 		{% endfor %}
 	{% endfor %}
 	</div>
-	<div id="back-to-home"><a href="/">&laquo; Back to Home</a></div>
+	<div id="back-to-home"><a href="/">&laquo; Volver a inicio</a></div>
 {% endblock %}
