--- a/static/pygments.css
+++ b/static/pygments.css
@@ -1,72 +1,69 @@
-/*
-    Base16 Eighties Dark
-    Author: Chris Kempson (http://chriskempson.com)
-
-    Pygments template by Jan T. Sott (https://github.com/idleberg)
-    Created with Base16 Builder by Chris Kempson (https://github.com/chriskempson/base16-builder)
-*/
-
-.codehilitetable, .linenos { background: #2d2d2d; color: #f2f0ec }
-.c, .linenos { color: #747369 } /* Comment (and line numbers) */
-.err { color: #f2777a } /* Error */
-.k   { color: #cc99cc } /* Keyword */
-.l   { color: #f99157 } /* Literal */
-.n   { color: #f2f0ec } /* Name */
-.o   { color: #66cccc } /* Operator */
-.p   { color: #f2f0ec } /* Punctuation */
-.cm  { color: #747369 } /* Comment.Multiline */
-.cp  { color: #747369 } /* Comment.Preproc */
-.c1  { color: #747369 } /* Comment.Single */
-.cs  { color: #747369 } /* Comment.Special */
-.gd  { color: #f2777a } /* Generic.Deleted */
-.ge  { font-style: italic } /* Generic.Emph */
-.gh  { color: #f2f0ec; font-weight: bold } /* Generic.Heading */
-.gi  { color: #99cc99 } /* Generic.Inserted */
-.gp  { color: #747369; font-weight: bold } /* Generic.Prompt */
-.gs  { font-weight: bold } /* Generic.Strong */
-.gu  { color: #66cccc; font-weight: bold } /* Generic.Subheading */
-.kc  { color: #cc99cc } /* Keyword.Constant */
-.kd  { color: #cc99cc } /* Keyword.Declaration */
-.kn  { color: #66cccc } /* Keyword.Namespace */
-.kp  { color: #cc99cc } /* Keyword.Pseudo */
-.kr  { color: #cc99cc } /* Keyword.Reserved */
-.kt  { color: #ffcc66 } /* Keyword.Type */
-.ld  { color: #99cc99 } /* Literal.Date */
-.m   { color: #f99157 } /* Literal.Number */
-.s   { color: #99cc99 } /* Literal.String */
-.na  { color: #6699cc } /* Name.Attribute */
-.nb  { color: #f2f0ec } /* Name.Builtin */
-.nc  { color: #ffcc66 } /* Name.Class */
-.no  { color: #f2777a } /* Name.Constant */
-.nd  { color: #66cccc } /* Name.Decorator */
-.ni  { color: #f2f0ec } /* Name.Entity */
-.ne  { color: #f2777a } /* Name.Exception */
-.nf  { color: #6699cc } /* Name.Function */
-.nl  { color: #f2f0ec } /* Name.Label */
-.nn  { color: #ffcc66 } /* Name.Namespace */
-.nx  { color: #6699cc } /* Name.Other */
-.py  { color: #f2f0ec } /* Name.Property */
-.nt  { color: #66cccc } /* Name.Tag */
-.nv  { color: #f2777a } /* Name.Variable */
-.ow  { color: #66cccc } /* Operator.Word */
-.w   { color: #f2f0ec } /* Text.Whitespace */
-.mf  { color: #f99157 } /* Literal.Number.Float */
-.mh  { color: #f99157 } /* Literal.Number.Hex */
-.mi  { color: #f99157 } /* Literal.Number.Integer */
-.mo  { color: #f99157 } /* Literal.Number.Oct */
-.sb  { color: #99cc99 } /* Literal.String.Backtick */
-.sc  { color: #f2f0ec } /* Literal.String.Char */
-.sd  { color: #747369 } /* Literal.String.Doc */
-.s2  { color: #99cc99 } /* Literal.String.Double */
-.se  { color: #f99157 } /* Literal.String.Escape */
-.sh  { color: #99cc99 } /* Literal.String.Heredoc */
-.si  { color: #f99157 } /* Literal.String.Interpol */
-.sx  { color: #99cc99 } /* Literal.String.Other */
-.sr  { color: #99cc99 } /* Literal.String.Regex */
-.s1  { color: #99cc99 } /* Literal.String.Single */
-.ss  { color: #99cc99 } /* Literal.String.Symbol */
-.bp  { color: #f2f0ec } /* Name.Builtin.Pseudo */
-.vc  { color: #f2777a } /* Name.Variable.Class */
-.vg  { color: #f2777a } /* Name.Variable.Global */
-.vi  { color: #f2777a } /* Name.Variable.Instance */
-.il  { color: #f99157 } /* Literal.Number.Integer.Long */
+.hll { background-color: #ffffcc }
+.c { color: #8f5902; font-style: italic } /* Comment */
+.err { color: #a40000; border: 1px solid #ef2929 } /* Error */
+.g { color: #000000 } /* Generic */
+.k { color: #204a87; font-weight: bold } /* Keyword */
+.l { color: #000000 } /* Literal */
+.n { color: #000000 } /* Name */
+.o { color: #ce5c00; font-weight: bold } /* Operator */
+.x { color: #000000 } /* Other */
+.p { color: #000000; font-weight: bold } /* Punctuation */
+.cm { color: #8f5902; font-style: italic } /* Comment.Multiline */
+.cp { color: #8f5902; font-style: italic } /* Comment.Preproc */
+.c1 { color: #8f5902; font-style: italic } /* Comment.Single */
+.cs { color: #8f5902; font-style: italic } /* Comment.Special */
+.gd { color: #a40000 } /* Generic.Deleted */
+.ge { color: #000000; font-style: italic } /* Generic.Emph */
+.gr { color: #ef2929 } /* Generic.Error */
+.gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.gi { color: #00A000 } /* Generic.Inserted */
+.go { color: #000000; font-style: italic } /* Generic.Output */
+.gp { color: #8f5902 } /* Generic.Prompt */
+.gs { color: #000000; font-weight: bold } /* Generic.Strong */
+.gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.gt { color: #a40000; font-weight: bold } /* Generic.Traceback */
+.kc { color: #204a87; font-weight: bold } /* Keyword.Constant */
+.kd { color: #204a87; font-weight: bold } /* Keyword.Declaration */
+.kn { color: #204a87; font-weight: bold } /* Keyword.Namespace */
+.kp { color: #204a87; font-weight: bold } /* Keyword.Pseudo */
+.kr { color: #204a87; font-weight: bold } /* Keyword.Reserved */
+.kt { color: #204a87; font-weight: bold } /* Keyword.Type */
+.ld { color: #000000 } /* Literal.Date */
+.m { color: #0000cf; font-weight: bold } /* Literal.Number */
+.s { color: #4e9a06 } /* Literal.String */
+.na { color: #c4a000 } /* Name.Attribute */
+.nb { color: #204a87 } /* Name.Builtin */
+.nc { color: #000000 } /* Name.Class */
+.no { color: #000000 } /* Name.Constant */
+.nd { color: #5c35cc; font-weight: bold } /* Name.Decorator */
+.ni { color: #ce5c00 } /* Name.Entity */
+.ne { color: #cc0000; font-weight: bold } /* Name.Exception */
+.nf { color: #000000 } /* Name.Function */
+.nl { color: #f57900 } /* Name.Label */
+.nn { color: #000000 } /* Name.Namespace */
+.nx { color: #000000 } /* Name.Other */
+.py { color: #000000 } /* Name.Property */
+.nt { color: #204a87; font-weight: bold } /* Name.Tag */
+.nv { color: #000000 } /* Name.Variable */
+.ow { color: #204a87; font-weight: bold } /* Operator.Word */
+.w { color: #f8f8f8; text-decoration: underline } /* Text.Whitespace */
+.mf { color: #0000cf; font-weight: bold } /* Literal.Number.Float */
+.mh { color: #0000cf; font-weight: bold } /* Literal.Number.Hex */
+.mi { color: #0000cf; font-weight: bold } /* Literal.Number.Integer */
+.mo { color: #0000cf; font-weight: bold } /* Literal.Number.Oct */
+.sb { color: #4e9a06 } /* Literal.String.Backtick */
+.sc { color: #4e9a06 } /* Literal.String.Char */
+.sd { color: #8f5902; font-style: italic } /* Literal.String.Doc */
+.s2 { color: #4e9a06 } /* Literal.String.Double */
+.se { color: #4e9a06 } /* Literal.String.Escape */
+.sh { color: #4e9a06 } /* Literal.String.Heredoc */
+.si { color: #4e9a06 } /* Literal.String.Interpol */
+.sx { color: #4e9a06 } /* Literal.String.Other */
+.sr { color: #4e9a06 } /* Literal.String.Regex */
+.s1 { color: #4e9a06 } /* Literal.String.Single */
+.ss { color: #4e9a06 } /* Literal.String.Symbol */
+.bp { color: #3465a4 } /* Name.Builtin.Pseudo */
+.vc { color: #000000 } /* Name.Variable.Class */
+.vg { color: #000000 } /* Name.Variable.Global */
+.vi { color: #000000 } /* Name.Variable.Instance */
+.il { color: #0000cf; font-weight: bold } /* Literal.Number.Integer.Long */
