--- a/static/pneumatic.scss
+++ b/static/pneumatic.scss
@@ -183,17 +183,18 @@ textarea, code, pre, tt {
 }
 
 tt {
-	font-size: 0.8em; 
+	font-size: 0.8em;
 }
 
 pre {
 
-	padding: 8px 30px; 
-	margin: 15px auto; 
+	padding: 8px 30px;
+	margin: 15px auto;
 	line-height: 1.5;
-	border-style:solid; 
-	border-width:1px; 
+	border-style:solid;
+	border-width:1px;
 	border-color:#bbb;
+    overflow-x: auto;
 
 }
 
