Fix: Spanish translation

--- a/templates/404.html
+++ b/templates/404.html
@@ -8,5 +8,5 @@
 	<div class="content">
         <p>Puede intentar encontrarla en el <a href="/archive/">Archivo</a> del sitio</p>
 	</div>
-	<div id="back-to-home"><a href="/">&laquo; Volver a inicio to</a></div>
+	<div id="back-to-home"><a href="/">&laquo; Volver a inicio</a></div>
 {% endblock %}
