--- a/templates/period_archives.html
+++ b/templates/period_archives.html
@@ -9,15 +9,15 @@
 	{% for year, _ in dates | groupby('date.year') %}
 		{% for month, articles in dates | groupby('date.month') %}
 			{% if not period[1] %}
-			<h2><a href="/{{ articles[0].date.strftime('%Y/%m') }}/">{{ articles[0].date.strftime('%B') }}</a></h2>
+			<h2><a class="no-dec" href="/{{ articles[0].date.strftime('%Y/%m') }}/">{{ articles[0].date.strftime('%B') }}</a></h2>
 			{% endif %}
 			<ul>
 				{% for article in articles | sort(attribute='date') %}
-				<li><a href="/{{ article.url }}">{{ article.title }}</a> &raquo; {{ article.locale_date }}</li>
+				<li><a class="no-dec" href="/{{ article.url }}">{{ article.title }}</a> &raquo; {{ article.locale_date }}</li>
 				{% endfor %}
 			</ul>
 		{% endfor %}
 	{% endfor %}
 	</div>
-	<div id="back-to-home"><a href="/">&laquo; Volver a inicio</a></div>
+	<div id="back-to-home"><a class="no-dec no-dec-h" href="/">&laquo; Volver a inicio</a></div>
 {% endblock %}
