--- a/templates/page.html
+++ b/templates/page.html
@@ -17,9 +17,8 @@
 {% endblock %}
 
 {% block content %}
-	<h1 class="title"><a href="/{{ page.url }}" title="{{ page.title | striptags }}">{{ page.title }}</a></h1>
+	<h1 class="page-title"><a href="/{{ page.url }}" title="{{ page.title | striptags }}">{{ page.title }}</a></h1>
 	<div class="content">
 		{{ page.content }}
 	</div>
-	<div id="back-to-home"><a href="/">&laquo; Volver a inicio</a></div>
 {% endblock %}
