--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
 	{% endif %}
 	{% endif %}
 
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css" crossorigin="anonymous">
+
 	<!-- Favicons -->
 	<link rel="apple-touch-icon" href="/{{ ICONS_PATH }}/apple-touch-icon.png">
 	{% for size in (57, 60, 72, 76, 114, 120, 144, 152, 180) %}
