--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ SITENAME }}{% endblock %}
+{% block title %}{{ SITENAME }} - Blog{% endblock %}
 {% block description %}{{ INDEX_DESCRIPTION }}{% endblock %}
 
 {% block meta %}
