--- a/static/pneumatic.scss
+++ b/static/pneumatic.scss
@@ -615,3 +615,18 @@ body {
 	p a:after { content:" ["attr(href)"]"; }
 	.linenos { border-right: none; }
 }
+
+.video-responsive {
+	height: 0;
+	overflow: hidden;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	position: relative;
+	}
+.video-responsive iframe, .video-responsive object, .video-responsive embed {
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	}
