--- a/templates/article.html
+++ b/templates/article.html
@@ -9,6 +9,7 @@
 	<meta name="twitter:creator" content="{{ TWITTER_USERNAME }}">
 	<meta name="twitter:domain" content="{{ DOMAIN }}">
 	<meta name="twitter:site" content="{{ TWITTER_USERNAME }}">
+	<meta name="twitter:image" content="{{ SITEURL }}{{ article.metadata.image }}">
 	<meta property="og:title" content="{{ article.title|striptags }}">
 	<meta property="og:description" content="{{ article.summary|striptags }}">
 	<meta property="og:image" content="{{ SITEURL }}/{{ ICONS_PATH }}/avatar.png">
