--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
 		<aside>
 			<div id="bar-title">
 				<i class="fas fa-bars btn-open"></i>
-				<a href="/"><img id="avatar" alt="Site Avatar" src="/{{ ICONS_PATH }}/avatar.jpg"></a>
+				<a href="/"><img id="avatar" alt="Site Avatar" src="/{{ ICONS_PATH }}/avatar.png"></a>
 				<div id="name"><a class="no-dec no-dec-h bold" href="/">{{ SITENAME }}</a></div>
 			</div>
 			<div id="bio">{{ BIO_TEXT }}</div>
